ad ogp icon manifest.json

--- a/source/index.html
+++ b/source/index.html
@@ -4,8 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>clavision</title>
-    <script defer src="./main.ts"></script>
+    <meta name="description" content="東京電機大学の時間割表とフロアマップを確認できる">
+    <meta name="theme-color" content="#581d74">
+    <title>clavision 東京電機大学の時間割表とフロアマップ</title>
+    <link rel="icon" href="https://clavision.web.app/assets/icon.png">
+    <link rel="manifest" href="https://clavision.web.app/assets/manifest.json">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="og:url" content="https://clavision.web.app/">
+    <meta property="og:title" content="clavision 東京電機大学の時間割表とフロアマップ">
+    <meta property="og:site_name" content="clavision">
+    <meta property="og:description" content="東京電機大学の時間割表とフロアマップを確認できる">
+    <meta property="og:image" content="https://clavision.web.app/assets/icon.png">
+    <script defer src="/main.ts"></script>
     <style>
         html {
             height: 100%;
@@ -24,6 +34,9 @@
 
 <body>
     clavision 読み込み中
+    <noscript>
+        clavisionではJavaScriptを使用します。ブラウザの設定で有効にしてください。
+    </noscript>
 </body>
 
 </html>
